Fix unsupport api